--- a/p/array-函数效率问题/index.html
+++ b/p/array-函数效率问题/index.html
@@ -13,6 +13,8 @@
 <meta name="twitter:title" content="Array 函数效率问题">
 <meta name="twitter:description" content="不仅仅是慢速 SQL 会导致我们的程序变慢，不恰当的内置函数的使用也是需要重视的一个点。要在不同的场景选择适用的内置函数。"><meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content='https://weekthree.github.io/p/array-%E5%87%BD%E6%95%B0%E6%95%88%E7%8E%87%E9%97%AE%E9%A2%98/1.jpg' />
+    <link rel="shortcut icon" href="img/favicon.ico" />
+
     </head>
     <body class="
     article-page has-toc
@@ -243,10 +245,12 @@
 <p>过上面三个例子，我们发现不仅仅是慢速 SQL 会导致我们的程序变慢，不恰当的内置函数的使用也是需要重视的一个点。那么如何在享受内置函数便利的同时，又规避性能陷阱呢？
 这就需要我们对日常高频使用的相关函数的时间复杂度和执行方式都要有个大致的了解，这样才能在不同的场景中找到最适合的函数，也能在出现问题后快速定位，寻找别的实现方式替代。</p>
 <h2 id="参考资料">参考资料</h2>
-<p><a class="link" href="https://stackoverflow.com/questions/2473989/list-of-big-o-for-php-functions"  target="_blank" rel="noopener"
-    >List of Big-O for PHP functions</a><br>
-<a class="link" href="https://www.php.net/manual/zh/function.in-array.php"  target="_blank" rel="noopener"
-    >PHP 手册- Manual</a></p>
+<ol>
+<li><a class="link" href="https://stackoverflow.com/questions/2473989/list-of-big-o-for-php-functions"  target="_blank" rel="noopener"
+    >List of Big-O for PHP functions</a></li>
+<li><a class="link" href="https://www.php.net/manual/zh/function.in-array.php"  target="_blank" rel="noopener"
+    >PHP 手册- Manual</a></li>
+</ol>
 
 </section>
 
