--- a/p/redis-6.0新特性/index.html
+++ b/p/redis-6.0新特性/index.html
@@ -13,6 +13,8 @@
 <meta name="twitter:title" content="Redis 6.0新特性">
 <meta name="twitter:description" content="早在去年5月，Redis 6.0 的稳定版就已经发布。到今天为止，最新稳定版已经到6.2.6了。我们来看一下，Redis 6.0有哪些值得关注的新特性。"><meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content='https://weekthree.github.io/p/redis-6.0%E6%96%B0%E7%89%B9%E6%80%A7/1.jpg' />
+    <link rel="shortcut icon" href="img/favicon.ico" />
+
     </head>
     <body class="
     article-page has-toc
