--- a/关于/index.html
+++ b/关于/index.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
     <head><meta charset='utf-8'>
-<meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content='This is a test page for i18n support.'><title>关于</title>
+<meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content='个人信息 91 年生人，男，坐标阿卡林省南昌市。
+兴趣使然的码仔。
+希望通过记录，让知识汇聚成大海。
+泰山不让土壤,故能成其大。河海不择细流,故能就其深。
+技能清单  开发语言：PHP / Go / Python 数据库：MySQL / Redis(Pika) / Elasticsearch / ClickHouse 框架：Laravel / ThinkPHP / Hyperf / Gin / Scrapy / Selenium 版本控制：Git / Svn 依赖管理：Composer / Go Module 运维：Linux / Nginx / Docker 基础：设计模式 / 数据结构 消息队列：Redis 队列 / kafka 高并发：Swoole / Go 协程 通信协议：HTTP(S) / TCP / Websocket 其它：爬虫 / fineBI / Apifox / OAuth 2.0 / 推荐系统 / jwt / 正则 / 小程序 / 微信公众号 / 支付  '><title>关于</title>
 
 <link rel='canonical' href='https://weekthree.github.io/%E5%85%B3%E4%BA%8E/'>
 
 <link rel="stylesheet" href="/scss/style.min.css"><meta property='og:title' content='关于'>
-<meta property='og:description' content='This is a test page for i18n support.'>
+<meta property='og:description' content='个人信息 91 年生人，男，坐标阿卡林省南昌市。
+兴趣使然的码仔。
+希望通过记录，让知识汇聚成大海。
+泰山不让土壤,故能成其大。河海不择细流,故能就其深。
+技能清单  开发语言：PHP / Go / Python 数据库：MySQL / Redis(Pika) / Elasticsearch / ClickHouse 框架：Laravel / ThinkPHP / Hyperf / Gin / Scrapy / Selenium 版本控制：Git / Svn 依赖管理：Composer / Go Module 运维：Linux / Nginx / Docker 基础：设计模式 / 数据结构 消息队列：Redis 队列 / kafka 高并发：Swoole / Go 协程 通信协议：HTTP(S) / TCP / Websocket 其它：爬虫 / fineBI / Apifox / OAuth 2.0 / 推荐系统 / jwt / 正则 / 小程序 / 微信公众号 / 支付  '>
 <meta property='og:url' content='https://weekthree.github.io/%E5%85%B3%E4%BA%8E/'>
 <meta property='og:site_name' content='随笔记'>
 <meta property='og:type' content='article'><meta property='article:section' content='Page' />
 <meta name="twitter:title" content="关于">
-<meta name="twitter:description" content="This is a test page for i18n support.">
+<meta name="twitter:description" content="个人信息 91 年生人，男，坐标阿卡林省南昌市。
+兴趣使然的码仔。
+希望通过记录，让知识汇聚成大海。
+泰山不让土壤,故能成其大。河海不择细流,故能就其深。
+技能清单  开发语言：PHP / Go / Python 数据库：MySQL / Redis(Pika) / Elasticsearch / ClickHouse 框架：Laravel / ThinkPHP / Hyperf / Gin / Scrapy / Selenium 版本控制：Git / Svn 依赖管理：Composer / Go Module 运维：Linux / Nginx / Docker 基础：设计模式 / 数据结构 消息队列：Redis 队列 / kafka 高并发：Swoole / Go 协程 通信协议：HTTP(S) / TCP / Websocket 其它：爬虫 / fineBI / Apifox / OAuth 2.0 / 推荐系统 / jwt / 正则 / 小程序 / 微信公众号 / 支付  ">
+    <link rel="shortcut icon" href="img/favicon.ico" />
+
     </head>
     <body class="
     article-page 
@@ -181,7 +195,25 @@
 </header>
 
     <section class="article-content">
-    <p>This is a test page for i18n support.</p>
+    <h1 id="个人信息">个人信息</h1>
+<p>91 年生人，男，坐标阿卡林省南昌市。</p>
+<p>兴趣使然的码仔。</p>
+<p>希望通过记录，让知识汇聚成大海。</p>
+<p>泰山不让土壤,故能成其大。河海不择细流,故能就其深。</p>
+<h1 id="技能清单">技能清单</h1>
+<ul>
+<li>开发语言：PHP / Go / Python</li>
+<li>数据库：MySQL / Redis(Pika) / Elasticsearch / ClickHouse</li>
+<li>框架：Laravel / ThinkPHP / Hyperf / Gin / Scrapy / Selenium</li>
+<li>版本控制：Git / Svn</li>
+<li>依赖管理：Composer / Go Module</li>
+<li>运维：Linux / Nginx / Docker</li>
+<li>基础：设计模式 / 数据结构</li>
+<li>消息队列：Redis 队列 / kafka</li>
+<li>高并发：Swoole / Go 协程</li>
+<li>通信协议：HTTP(S) / TCP / Websocket</li>
+<li>其它：爬虫 / fineBI / Apifox / OAuth 2.0 / 推荐系统 / jwt / 正则 / 小程序 / 微信公众号 / 支付</li>
+</ul>
 
 </section>
 
