--- a/友情链接/index.html
+++ b/友情链接/index.html
@@ -18,6 +18,8 @@ links:- title:GitHubdescription:GitHub is the world&amp;#39;s largest software d
 <meta name="twitter:description" content="To use this feature, add links section to frontmatter.
 This page&amp;rsquo;s frontmatter:
 links:- title:GitHubdescription:GitHub is the world&amp;#39;s largest software development platform.website:https://github.comimage:https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png- title:TypeScriptdescription:TypeScript is a typed superset of JavaScript that compiles to plain JavaScript.website:https://www.typescriptlang.orgimage:ts-logo-128.jpgimage field accepts both local and external images.">
+    <link rel="shortcut icon" href="img/favicon.ico" />
+
     </head>
     <body class="
     article-page 
