--- a/p/emoji-support/index.html
+++ b/p/emoji-support/index.html
@@ -13,6 +13,8 @@
 <meta name="twitter:title" content="Emoji Support">
 <meta name="twitter:description" content="Guide to emoji usage in Hugo"><meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content='https://weekthree.github.io/p/emoji-support/the-creative-exchange-d2zvqp3fpro-unsplash.jpg' />
+    <link rel="shortcut icon" href="img/favicon.ico" />
+
     </head>
     <body class="
     article-page 
