--- a/p/markdown-syntax-guide/index.html
+++ b/p/markdown-syntax-guide/index.html
@@ -13,6 +13,8 @@
 <meta name="twitter:title" content="Markdown Syntax Guide">
 <meta name="twitter:description" content="Sample article showcasing basic Markdown syntax and formatting for HTML elements."><meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content='https://weekthree.github.io/p/markdown-syntax-guide/pawel-czerwinski-8uZPynIu-rQ-unsplash.jpg' />
+    <link rel="shortcut icon" href="img/favicon.ico" />
+
     </head>
     <body class="
     article-page has-toc
