--- a/p/مثال-نص/index.html
+++ b/p/مثال-نص/index.html
@@ -13,6 +13,8 @@
 <meta name="twitter:title" content="مثال نص">
 <meta name="twitter:description" content="هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة"><meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content='https://weekthree.github.io/p/%D9%85%D8%AB%D8%A7%D9%84-%D9%86%D8%B5/matt-le-SJSpo9hQf7s-unsplash.jpg' />
+    <link rel="shortcut icon" href="img/favicon.ico" />
+
     </head>
     <body class="
     article-page has-toc
