--- a/search/index.html
+++ b/search/index.html
@@ -11,7 +11,9 @@
 <meta property='og:site_name' content='随笔记'>
 <meta property='og:type' content='article'><meta property='article:section' content='Page' />
 <meta name="twitter:title" content="搜索">
-<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://weekthree.github.io/search/index.json"><link rel="preload" href="https://weekthree.github.io/search/index.json" as="fetch" crossorigin="anonymous">
+<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://weekthree.github.io/search/index.json">
+    <link rel="shortcut icon" href="img/favicon.ico" />
+<link rel="preload" href="https://weekthree.github.io/search/index.json" as="fetch" crossorigin="anonymous">
     </head>
     <body class="template-search">
     <script>
