--- a/p/test-chinese/index.html
+++ b/p/test-chinese/index.html
@@ -13,7 +13,7 @@
 <meta name="twitter:title" content="Chinese Test">
 <meta name="twitter:description" content="这是一个副标题"><meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content='https://weekthree.github.io/p/test-chinese/helena-hertz-wWZzXlDpMog-unsplash.jpg' />
-    <link rel="shortcut icon" href="img/favicon.ico" />
+    <link rel="shortcut icon" href="/img/favicon.ico" />
 
     </head>
     <body class="
