--- a/p/array-函数效率问题/index.html
+++ b/p/array-函数效率问题/index.html
@@ -13,7 +13,7 @@
 <meta name="twitter:title" content="Array 函数效率问题">
 <meta name="twitter:description" content="不仅仅是慢速 SQL 会导致我们的程序变慢，不恰当的内置函数的使用也是需要重视的一个点。要在不同的场景选择适用的内置函数。"><meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content='https://weekthree.github.io/p/array-%E5%87%BD%E6%95%B0%E6%95%88%E7%8E%87%E9%97%AE%E9%A2%98/1.jpg' />
-    <link rel="shortcut icon" href="img/favicon.ico" />
+    <link rel="shortcut icon" href="/img/favicon.ico" />
 
     </head>
     <body class="
