--- a/p/基于redis-geo实现的lbs功能/index.html
+++ b/p/基于redis-geo实现的lbs功能/index.html
@@ -13,7 +13,7 @@
 <meta name="twitter:title" content="基于Redis GEO实现的LBS功能">
 <meta name="twitter:description" content="GEO是Redis 3.2 版本中新增的专门面向LBS应用的一种数据类型。使用它我们可以非常方便的实现一些基于位置信息服务(Location-Based Service,LBS)的应用。"><meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content='https://weekthree.github.io/p/%E5%9F%BA%E4%BA%8Eredis-geo%E5%AE%9E%E7%8E%B0%E7%9A%84lbs%E5%8A%9F%E8%83%BD/113958-153525479855be.jpg' />
-    <link rel="shortcut icon" href="img/favicon.ico" />
+    <link rel="shortcut icon" href="/img/favicon.ico" />
 
     </head>
     <body class="
