--- a/links/index.html
+++ b/links/index.html
@@ -301,7 +301,7 @@
                     <h2 class="article-title">GitHub</h2>
                     <footer class="article-time">
                         
-                            Hugo blog 搭建
+                            全球最大同性交友网站。
                         
                     </footer>
                 </div>
